gitops/apps/minio/gojo/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio-gojo
spec:
  selector:
    matchLabels:
      app: minio-gojo
  template:
    metadata:
      labels:
        app: minio-gojo
    spec:
      nodeSelector:
        kubernetes.io/hostname: gojo
      tolerations:
      - key: "dedicated"
        operator: "Equal"
        effect: "NoSchedule"
      containers:
      - name: minio
        image: minio/minio:RELEASE.2024-09-22T00-33-43Z.fips
        args:
        - server
        - /storage
        - --console-address
        - ":9001"
        ports:
        - name: api
          containerPort: 9000
        - name: console
          containerPort: 9001
        volumeMounts:
        - name: storage
          mountPath: "/storage"
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: minio-gojo
