gitops/apps/minio/gojo/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-gojo
spec:
  type: ClusterIP
  selector:
    app: minio-gojo
  ports:
  - name: api
    port: 9000
    targetPort: api
  - name: console
    port: 9001
    targetPort: console
