gitops/apps/minio/gojo/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-gojo
  annotations:
    cert-manager.io/cluster-issuer: root-didactiklabs
  labels:
    probe: enabled
spec:
  rules:
    - host: 'minio.gojo.didactik.labs'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-gojo
                port:
                  number: 9001
  tls:
    - hosts:
        - 'minio.gojo.didactik.labs'
      secretName: minio-gojo-tls
